--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -12,7 +12,6 @@
   --div-boxshadow1: #31313150;
   --text-boxshadow1: #ffffff50;
   --text-boxshadow2: #ffffff70;
-  --cont-bordercolor1: #595959;
   --modal-background: #313131;
   --modal-line1: #3b3b3b;
   --modal-item-hover: #373737;
@@ -31,12 +30,16 @@
   --navlink-others-color: #494152;
   --navlink-others-color-hover: #5f5a66;
   --index-post-bg-color: #313131;
-  --cont-bgcolor1: #313131;
-  --cont-bgcolor2: #454545;
+  --index-bgcolor1: #313131;
+  --index-bgcolor2: #454545;
+  --index-border1: #595959;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
   --publish-input-color: #1d1d1d;
+  --create-input-bg: #313131;
+  --create-border1: #313131;
+  --create-border2: #595959;
   --pd-actionbtns-color: #444444;
   --pd-actionbtns-color-hover1: #5e5e5e;
   --pd-actionbtns-color2: #444444;
@@ -82,7 +85,6 @@
   --div-boxshadow1: #e5e5e550;
   --text-boxshadow1: #00000050;
   --text-boxshadow2: #00000070;
-  --cont-bordercolor1: #dcdcdc;
   --modal-background: #dcdcdc;
   --modal-line1: #b5b5b5;
   --modal-item-hover: #d1d8db;
@@ -101,12 +103,16 @@
   --navlink-others-color: #9a90a6;
   --navlink-others-color-hover: #816f96;
   --index-post-bg-color: #ffffff;
-  --cont-bgcolor1: #f9f9f9;
-  --cont-bgcolor2: #ffffff;
+  --index-bgcolor1: #f9f9f9;
+  --index-bgcolor2: #ffffff;
+  --index-border1: #dcdcdc;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
   --publish-input-color: #dcdcdc;
+  --create-input-bg: #dcdcdc;
+  --create-border1: #dcdcdc;
+  --create-border2: #dcdcdc;
   --pd-actionbtns-color: #c7c7c7;
   --pd-actionbtns-color-hover1: #c5c5c5;
   --pd-actionbtns-color2: #c7c7c7;
