--- a/OmneFictio.Web/wwwroot/css/create.scss
+++ b/OmneFictio.Web/wwwroot/css/create.scss
@@ -1,26 +1,367 @@
-body{
+body {
     background-color: var(--body-bg);
 }
-header{
+
+header {
     border-bottom: 1px solid var(--background-color2);
 }
-main{
 
+main {}
+
+.create_content-container {
+    display: flex;
+    flex-direction: column;
+
+    .cc-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 5px;
+        padding: 16px;
+
+        h2 {
+            font-size: 1.5rem;
+            font-family: 'Courier New', Georgia;
+            padding-top: 3px;
+        }
+
+        select {
+            outline: none;
+            border: 1px solid #5e5e5e;
+            background: var(--create-input-bg);
+            color: var(--text-color1);
+            padding: 4px;
+            border-radius: 5px;
+            font-size: 1.1rem;
+            cursor: pointer;
+            font-family: 'Gudea', cursive;
+        }
+    }
+
+    .cc-body {}
 }
 
+//Content Creation - Fiction
+.cc-fiction {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+
+    .ff-primary {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid var(--create-border1);
+        background-color: var(--background-color1);
+        border-radius: 4px;
+
+        .ff-primary-header {
+            padding: 16px;
+
+            input {
+                font-size: 1.2rem;
+                color: var(--text-color1);
+                padding: 6px 10px;
+                outline: none;
+                width: 100%;
+                border-radius: 4px;
+                border: 1px solid var(--create-border2);
+                background-color: var(--create-input-bg);
+                font-family: 'Gudea', cursive;
+            }
+        }
+
+        .ff-primary-body {
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+
+            textarea {
+                font-size: 1rem;
+                padding: 6px 10px;
+                outline: none;
+                width: 100%;
+                min-height: 140px;
+                border-radius: 4px 4px 0 0;
+                color: var(--text-color1);
+                border: 1px solid var(--create-border2);
+                background-color: var(--create-input-bg);
+                font-family: 'Times New Roman';
+            }
+
+            .description-tools {
+                border-radius: 0 0 4px 4px;
+                padding: 6px;
+                height: 36px;
+                border: 1px solid var(--create-border2);
+                background-color: var(--create-input-bg);
+                border-top: 0;
+            }
+        }
+    }
+
+    .ff-info {
+        padding: 8px;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid var(--create-border1);
+        background-color: var(--background-color1);
+        border-radius: 4px;
+
+        .ff-properties-cont {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 12px;
+            padding: 10px;
+
+            select {
+                outline: none;
+                border: 1px solid var(--create-border2);
+                background: var(--create-input-bg);
+                color: var(--text-color1);
+                padding: 4px 10px;
+                border-radius: 5px;
+                font-size: 1.1rem;
+                cursor: pointer;
+                font-family: 'Gudea', cursive;
+            }
+        }
+
+        .ff-coverimage-cont {
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 10px;
+            padding: 10px;
+
+            span {
+                flex-shrink: 0;
+                font-size: 1.2rem;
+                font-family: 'Gudea', cursive;
+            }
+
+            .ff-coverimage-wrap {
+                flex-grow: 1;
+
+                input {
+                    width: 100%;
+                    padding: 4px 4px;
+                    max-width: 500px;
+                    color: var(--text-color1);
+                    background-color: var(--create-input-bg);
+                    border: none;
+                    outline: none;
+                    border-radius: 4px;
+                }
+            }
+        }
+
+        .ff-tags-cont,
+        .ff-series-cont {
+            display: flex;
+            flex-direction: column;
+            padding: 10px;
+
+            .fftags-header,
+            .ffseries-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 20px;
+
+                h3 {
+                    font-size: 1.5rem;
+                    font-family: sans-serif;
+                }
+
+                button {
+                    display: flex;
+                    align-items: center;
+                    outline: none;
+                    border: none;
+                    color: #ffffff;
+                    padding: 2px;
+                    border-radius: 6px;
+                    background-color: var(--button-blue);
+
+                    &:hover {
+                        background-color: var(--button-blue-hover);
+                    }
+
+                    i {
+                        display: flex;
+                        font-size: 2rem;
+                    }
+                }
+            }
+
+            .fftags-body,
+            .ffseries-body {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 7px;
+                padding: 8px 0px;
+                font-size: 13px;
+
+                span {
+                    padding: 2px 10px;
+                    color: #ffffff;
+                    display: flex;
+                    align-items: center;
+
+                    i {
+                        font-size: 1.1rem;
+                        margin-left: 7px;
+                        cursor: pointer;
+                        display: flex;
+
+                        &:before {
+                            background-color: #c36d6d;
+                            border-radius: 50%;
+                            transition: 0.1s;
+                        }
+
+                        &:hover::before {
+                            background-color: #be2424;
+                        }
+                    }
+                }
+            }
+        }
+
+        .ff-tags-cont .fftags-body span {
+            border-radius: 14px;
+            background-color: #6c92a7;
+            font-size: 0.9em;
+            font-family: 'Itim', cursive;
+        }
+
+        .ff-series-cont .ffseries-body span {
+            border-radius: 4px;
+            background-color: #8d2c2c;
+            font-size: 1em;
+            font-family: 'Gudea', cursive;
+        }
+    }
+
+    .ff-footer {
+        padding: 16px;
+        display: flex;
+        flex-direction: column;
+        background-color: var(--background-color1);
+        border: 1px solid var(--create-border1);
+        border-radius: 4px;
+        gap: 20px 0;
+        justify-content: center;
+
+        .ff-clearbtn-cont {
+            display: flex;
+            justify-content: center;
+            padding: 0 10px;
+            width: 100%;
+        }
+
+        .ff-savebtn-cont {
+            display: flex;
+            justify-content: center;
+            gap: 10px 4%;
+            padding: 0 10px;
+        }
+
+        button {
+            outline: none;
+            border: none;
+            padding: 4px 16px 3px;
+            border-radius: 6px;
+            font-size: 1rem;
+            font-family: 'Gudea', cursive;
+            background-color: var(--button-green);
+            color: #ffffff;
+
+            &:hover {
+                background-color: var(--button-green-hover);
+            }
+        }
+
+        button.ff-clear {
+            background-color: var(--button-red);
+
+            &:hover {
+                background-color: var(--button-red-hover);
+            }
+        }
+
+        /*.ff-save_draft{
+        }
+        .ff-save_and_continue{
+        }*/
+    }
+}
 
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
+    .create_content-container {
+        .cc-fiction {
+            .ff-footer {
+                flex-direction: row;
+
+                .ff-clearbtn-cont {
+                    width: 30%;
+                    flex-shrink: 0;
+                    border-right: 1px solid var(--create-border1);
+                }
+
+                .ff-savebtn-cont {
+                    flex-grow: 1;
+                }
+
+                button {
+                    font-size: 1.3rem;
+                }
+            }
+        }
+    }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
+    .create_content-container {
+        .cc-header {
+            justify-content: flex-start;
+            gap: 4%;
+        }
+
+        .cc-fiction {
+            .ff-info {
+                padding: 16px;
+                .ff-properties-cont {
+                    justify-content: flex-start;
+                    gap: 4%;
+                }
+
+                .ff-tags-cont,
+                .ff-series-cont {
+
+                    .fftags-header,
+                    .ffseries-header {
+                        justify-content: flex-start;
+                    }
+                    
+                    .fftags-body,
+                    .ffseries-body{
+                        padding: 16px 10px;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-}
+@media (min-width: 992px) {}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {}
