--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -18,7 +18,6 @@
     --text-boxshadow1: #ffffff50;
     --text-boxshadow2: #ffffff70;
 
-    --cont-bordercolor1: #595959;
     
     //modals
     --modal-background: #313131;
@@ -42,8 +41,9 @@
     --navlink-others-color-hover: #5f5a66;
     //index
     --index-post-bg-color: #313131;
-    --cont-bgcolor1: #313131;
-    --cont-bgcolor2: #454545;
+    --index-bgcolor1: #313131;
+    --index-bgcolor2: #454545;
+    --index-border1: #595959;
     //read
     //register
     --register-form-color: #404040;
@@ -51,6 +51,10 @@
     //publish
     --publish-form-color: #404040;
     --publish-input-color: #1d1d1d;
+    //create
+    --create-input-bg: #313131;
+    --create-border1: #313131;
+    --create-border2: #595959;
     //post
     --pd-actionbtns-color: #444444;
     --pd-actionbtns-color-hover1: #5e5e5e;
@@ -108,7 +112,6 @@
     --text-boxshadow1: #00000050;
     --text-boxshadow2: #00000070;
 
-    --cont-bordercolor1: #dcdcdc;
     
     //modals
     --modal-background: #dcdcdc;
@@ -132,8 +135,9 @@
     --navlink-others-color-hover: #816f96;
     //index
     --index-post-bg-color: #ffffff;
-    --cont-bgcolor1: #f9f9f9;
-    --cont-bgcolor2: #ffffff;
+    --index-bgcolor1: #f9f9f9;
+    --index-bgcolor2: #ffffff;
+    --index-border1: #dcdcdc;
     //read
     //register
     --register-form-color: #f0f0f0;
@@ -141,6 +145,10 @@
     //publish
     --publish-form-color: #f0f0f0;
     --publish-input-color: #dcdcdc;
+    //create
+    --create-input-bg: #dcdcdc;
+    --create-border1: #dcdcdc;
+    --create-border2: #dcdcdc;
     //post
     --pd-actionbtns-color: #c7c7c7;
     --pd-actionbtns-color-hover1: #c5c5c5;
