--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         </div>
         @if (username != null)
         {
-            <span>About You</span>
+            <span class="about_you_header">About You</span>
             <div class="about_you_links link_group">
                 <a class="link_cont" href="/u/@username">
                     <i class="bi bi-person"></i>
