--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -139,7 +139,7 @@
     </div>
 </template>
 
-<div class="modal-chapters-cont modalbg-base" id="modal-chapters">
+<div class="modal-chapters-cont modalbg-base-1" id="modal-chapters">
     <div class="modal-chapters">
         <div class="mc-header">
             <span>Chapters</span>
