--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -30,7 +30,7 @@
     </div>
 </template>
 
-<div class="orderby-cont modalbg-base" id="orderby-modal">
+<div class="orderby-cont modalbg-base-1" id="orderby-modal">
     <div class="orderby-box">
         <div class="obt-header">
             <div class="obt-title">
@@ -62,7 +62,7 @@
         </div>
     </div>
 </div>
-<div class="filter-cont modalbg-base" id="filter-modal">
+<div class="filter-cont modalbg-base-1" id="filter-modal">
     <div class="filter-box">
         <div class="f-header">
             <div class="f-reset_cont">
@@ -155,32 +155,32 @@
     </div>
 </div>
 
-<div class="filter-tagdd-cont modalbg-base-2 opacity1" id="filter-tagddmodal">
-    <div class="filter-tagdd">
-        <div class="tagdd-header">
-            <input type="text" class="tagdd-searchbar" id="tagdd-searchbar" placeholder="Search tag">
-            <i class="bi bi-x-lg" id="f-taggdd-close"></i>
+<div class="filter-taglist-cont modalbg-base-2 opacity1" id="filter-tag_list_modal">
+    <div class="filter-taglist">
+        <div class="taglist-header">
+            <input type="text" class="taglist-searchbar" id="taglist-searchbar" placeholder="Search tag">
+            <i class="bi bi-x-lg" id="f-taglist-close"></i>
         </div>
-        <ul class="" id="f-tagdd-list" data-action="include">
-            <li data-tagddvalue="action">Action</li>
-            <li data-tagddvalue="comedy">Comedy</li>
-            <li data-tagddvalue="fantasy">Fantasy</li>
-            <li data-tagddvalue="romance">Romance</li>
-            <li data-tagddvalue="dram">Dram</li>
-            <li data-tagddvalue="horror">Horror</li>
-            <li data-tagddvalue="adventure">Adventure</li>
-            <li data-tagddvalue="science_fiction">Science fiction</li>
+        <ul class="" id="f-taglist-list" data-action="include">
+            <li data-taglistvalue="action">Action</li>
+            <li data-taglistvalue="comedy">Comedy</li>
+            <li data-taglistvalue="fantasy">Fantasy</li>
+            <li data-taglistvalue="romance">Romance</li>
+            <li data-taglistvalue="dram">Dram</li>
+            <li data-taglistvalue="horror">Horror</li>
+            <li data-taglistvalue="adventure">Adventure</li>
+            <li data-taglistvalue="science_fiction">Science fiction</li>
         </ul>
     </div>
 </div>
 
-<div class="filter-addseries-cont modalbg-base-2 opacity1" id="filter-addseriesmodal">
-    <div class="filter-addseries">
-        <div class="fadds-header">
-            <input type="text" class="fadds-searchbar" id="fadds-searchbar" placeholder="Search">
-            <i class="bi bi-x-lg" id="fadds-close"></i>
+<div class="filter-serieslist-cont modalbg-base-2 opacity1" id="filter-serieslistmodal">
+    <div class="filter-serieslist">
+        <div class="fsl-header">
+            <input type="text" class="fsl-searchbar" id="serieslist-searchbar" placeholder="Search">
+            <i class="bi bi-x-lg" id="fsl-close"></i>
         </div>
-        <div class="fadds-dropdowns">
+        <div class="fsl-filters">
             <select>
                 <option value="0">Type</option>
                 <option value="1">Movie</option>
@@ -222,7 +222,7 @@
                 <option value="Z">Z</option>
             </select>
         </div>
-        <ul class="fadds-list" id="fadds-list">
+        <ul class="f-serieslist-list" id="f-serieslist-list">
             <li data-seriesval="Overlord">Overlord</li>
             <li data-seriesval="Harry_Potter">Harry Potter</li>
             <li data-seriesval="The_Boys">The Boys</li>
