--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -339,7 +339,7 @@
         </div>
     </template>
 
-    <div class="modal-replies-cont modalbg-base opacity1" id="modal-replies">
+    <div class="modal-replies-cont modalbg-base-1 opacity1" id="modal-replies">
         <div class="modal-replies">
             <div class="mr-header">
                 <span>Replies</span>
@@ -359,7 +359,7 @@
     </div>
 
 
-    <div class="login-modal-cont modalbg-base" id="login-modal">
+    <div class="login-modal-cont modalbg-base-1" id="login-modal">
         <form class="login-modal">
             <div class="lm-header">
                 <span class="lm-title">Login</span>
@@ -387,7 +387,7 @@
         </form>
     </div>
 
-    <div class="theme-switcher-cont modalbg-base" id="theme-switcher-modal">
+    <div class="theme-switcher-cont modalbg-base-1" id="theme-switcher-modal">
         <div class="theme-switcher">
             <div class="ts-header">
                 <span class="ts-title">Switch theme</span>
@@ -404,7 +404,7 @@
         </div>
     </div>
 
-    <div class="drawer-cont modalbg-base" id="drawer">
+    <div class="drawer-cont modalbg-base-1" id="drawer">
         <div class="drawer">
             <div class="dw-top">
                 <div class="dw-account">
