--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -110,7 +110,7 @@
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
   --publish-input-color: #dcdcdc;
-  --create-input-bg: #dcdcdc;
+  --create-input-bg: #f7f7f7;
   --create-border1: #dcdcdc;
   --create-border2: #dcdcdc;
   --pd-actionbtns-color: #c7c7c7;
