--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -146,7 +146,7 @@
     --publish-form-color: #f0f0f0;
     --publish-input-color: #dcdcdc;
     //create
-    --create-input-bg: #dcdcdc;
+    --create-input-bg: #f7f7f7;
     --create-border1: #dcdcdc;
     --create-border2: #dcdcdc;
     //post
