--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -78,7 +78,7 @@ select {
 }
 
 //Background clickable shadows
-.modalbg-base {
+.modalbg-base-1 {
     display: none;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -94,7 +94,7 @@ select {
 }
 
 .modalbg-base-2 {
-    @extend .modalbg-base;
+    @extend .modalbg-base-1;
     z-index: 505 !important;
 }
 
@@ -805,10 +805,10 @@ header {
     }
 }
 
-.filter-tagdd-cont {
+.filter-taglist-cont {
     padding-top: 6%;
 
-    .filter-tagdd {
+    .filter-taglist {
         display: flex;
         flex-direction: column;
         height: 340px;
@@ -820,14 +820,14 @@ header {
         padding-bottom: 10px;
         user-select: none;
 
-        .tagdd-header {
+        .taglist-header {
             width: 100%;
             flex-shrink: 0;
             display: flex;
             flex-direction: row;
             padding: 10px;
 
-            .tagdd-searchbar {
+            .taglist-searchbar {
                 padding: 2px 6px;
                 border: none;
                 outline: none;
@@ -865,10 +865,10 @@ header {
     }
 }
 
-.filter-addseries-cont {
+.filter-serieslist-cont {
     padding-top: 6%;
 
-    .filter-addseries {
+    .filter-serieslist {
         display: flex;
         flex-direction: column;
         height: 400px;
@@ -880,14 +880,14 @@ header {
         padding-bottom: 10px;
         user-select: none;
 
-        .fadds-header {
+        .fsl-header {
             width: 100%;
             flex-shrink: 0;
             display: flex;
             flex-direction: row;
             padding: 10px;
 
-            .fadds-searchbar {
+            .fsl-searchbar {
                 padding: 2px 6px;
                 border: none;
                 outline: none;
@@ -907,7 +907,7 @@ header {
             }
         }
 
-        .fadds-dropdowns {
+        .fsl-filters {
             padding: 4px;
             display: flex;
             flex-direction: row;
@@ -927,7 +927,7 @@ header {
             }
         }
 
-        .fadds-list {
+        .f-serieslist-list {
             flex-grow: 1;
             overflow-y: auto;
 
@@ -1259,11 +1259,11 @@ footer {
     }
 
     //----------------Repetitive
-    .filter-tagdd {
+    .filter-taglist {
         width: 280px;
     }
 
-    .filter-addseries {
+    .filter-serieslist {
         width: 344px;
     }
 
@@ -1339,8 +1339,8 @@ footer {
 
 @media (max-width: 260px) {
 
-    .filter-tagdd,
-    .filter-addseries,
+    .filter-taglist,
+    .filter-serieslist,
     .login-modal,
     .orderby-box,
     .filter-box,
