Create page add span remove span

--- a/OmneFictio.Web/Views/Home/Create.cshtml
+++ b/OmneFictio.Web/Views/Home/Create.cshtml
@@ -151,7 +151,7 @@
                         </button>
                     </div>
                     <div class="fftags-body">
-                        <span>Sample<i class="bi bi-x-circle ff-removetagbtn"></i></span>
+                        
                     </div>
                 </div>
                 <div class="ff-series-cont">
@@ -162,14 +162,14 @@
                         </button>
                     </div>
                     <div class="ffseries-body">
-                        <span>Sample<i class="bi bi-x-circle ff-removeseriesbtn"></i></span>
+
                     </div>
                 </div>
             </div>
 
             <div class="ff-footer">
-                <div class="ff-clearbtn-cont">
-                    <button type="button" class="ff-clear">Clear</button>
+                <div class="ff-cancelbtn-cont">
+                    <button type="button" class="ff-cancel">Cancel</button>
                 </div>
                 <div class="ff-savebtn-cont">
                     <button type="button" class="ff-save_draft">Save Draft</button>
